--- a/mars.html
+++ b/mars.html
@@ -690,7 +690,7 @@
                 goalMessage: {
                     target_pose: {
                         header: {
-                            frame_id: "/utm"
+                            frame_id: "utm"
                         },
                         pose: {
                             position: {
